[ThreadEditor]: switches layout bug fixed

--- a/src/styles/common/switch.less
+++ b/src/styles/common/switch.less
@@ -6,6 +6,8 @@
 @theme-color-400: #2196f3; 
 
 .material-switch {
+    display: inline-block;
+    line-height: 20px;
     width: 40px; 
     height: 28px;
     position: relative;
@@ -51,10 +53,8 @@
 }
 
 .anonymous-text {
-    line-height: 24px;
     margin-left: 5px;
     color: #777;
-    display: inline;
     font-size: 15px;
 
     &.active {
