--- a/src/styles/forum/thread.less
+++ b/src/styles/forum/thread.less
@@ -136,9 +136,14 @@
     }
 }
 
-.advanced-switch {
+.switch-wrapper {
     margin-right: 15px;
+}
+
+.switches-wrapper {
+    float: right;
     @media @phones {
-        margin-right: 0;
+        float: left;
+        margin-top: 10px;
     }
 }
