--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -15,7 +15,7 @@ body {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Pingfang-SC,"Microsoft Yahei",SimHei,Arial,sans-serif !important; 
     background-color: #fafafa;
 }
-input[type="file"] { display: none; }
+input[type="file"] { display: none !important; }
 button.raised, a.raised {
     padding: 3px 20px;
     box-shadow: @shadow-material-raise;
